# riscv-pvm

./: .gitignore  CLAUDE.md  Makefile  flake.nix  shell.nix
.cargo/: config.toml
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/workflows/: bench.yml  ci.yml  claude-review.yml  claude.yml  clean-caches.yml  integration-test.yml
kernels/dummy/: Makefile
kernels/dummy/src/: main.rs
kernels/etherlink/: Makefile
kernels/etherlink/bench/src/: results.rs
kernels/jstz/: Makefile
kernels/jstz/bench/: Cargo.toml
kernels/jstz/bench/src/: generate.rs  results.rs
nix/: env.nix  flake-inputs.nix
scripts/: benchmark.sh  ci-bench.sh  etherlink-bench.sh  jstz-bench.sh
src/lib_riscv/pvm/: backend.ml  backend.mli  common.ml  make_backend.ml  rollup_node_backend.ml  rollup_node_backend.mli
src/proto_alpha/lib_sc_rollup_node/: riscv_pvm.ml
src/riscv/: Cargo.toml  Makefile
src/riscv/api/src/: lib.rs
src/riscv/assets/: etherlink-erc20-inbox.json  etherlink-sample-inbox.json  gen_riscv_tests.sh  jstz.checksum  riscv-dummy.elf  riscv-dummy.elf.checksum  riscv-tests-no-mcause.patch
src/riscv/dummy_kernel/: Cargo.toml  Makefile
src/riscv/etherlink/: Cargo.toml  Makefile  etherlink_inbox.json
src/riscv/etherlink/.cargo/: config.toml
src/riscv/etherlink/bench/: Cargo.toml
src/riscv/etherlink/bench/src/: main.rs  results.rs
src/riscv/etherlink/kernel/: Cargo.toml
src/riscv/etherlink/kernel/src/: main.rs
src/riscv/jstz/: Cargo.toml  Makefile
src/riscv/jstz/.cargo/: config.toml
src/riscv/jstz/bench/src/: main.rs  results.rs
src/riscv/lib/: Cargo.toml
src/riscv/lib/src/: bits.rs  cache_utils.rs  instruction_context.rs  interpreter.rs  jit.rs  kernel_loader.rs  lib.rs  log.rs  machine_state.rs  parser.rs  program.rs  pvm.rs  state.rs  state_backend.rs  state_context.rs  stepper.rs  traps.rs
src/riscv/lib/src/instruction_context/: arithmetic.rs  comparable.rs  lens.rs  value.rs
src/riscv/lib/src/interpreter/: atomics.rs  branching.rs  common_memory.rs  float.rs  integer.rs  load_store.rs  rv32a.rs  rv32c.rs  rv32i.rs  rv32m.rs  rv64a.rs  rv64c.rs  rv64d.rs  rv64dc.rs  rv64f.rs  rv64m.rs  rv64zicsr.rs  rv64zifencei.rs
src/riscv/lib/src/jit/: builder.rs  state_access.rs
src/riscv/lib/src/jit/builder/: arithmetic.rs  block_state.rs  comparable.rs  errno.rs  ext_calls.rs  instruction.rs  sequence.rs  typed.rs
src/riscv/lib/src/jit/state_access/: abi.rs  stack.rs
src/riscv/lib/src/machine_state/: block_cache.rs  csregisters.rs  hart_state.rs  instruction.rs  memory.rs  mode.rs  registers.rs  reservation_set.rs
src/riscv/lib/src/machine_state/block_cache/: block.rs  block.rs.rej  config.rs  metrics.rs  ranged.rs  state.rs
src/riscv/lib/src/machine_state/block_cache/block/: dispatch.rs  interpreted.rs  jitted.rs
src/riscv/lib/src/machine_state/csregisters/: root.rs  values.rs
src/riscv/lib/src/machine_state/instruction/: constructors.rs  tagged_instruction.rs
src/riscv/lib/src/machine_state/memory/: buddy.rs  config.rs  protection.rs  state.rs
src/riscv/lib/src/machine_state/memory/buddy/: branch.rs  branch_combinations.rs  leaf.rs  proxy.rs
src/riscv/lib/src/parser/: instruction.rs
src/riscv/lib/src/pvm/: common.rs  hooks.rs  linux.rs  node_pvm.rs  reveals.rs  tezos.rs
src/riscv/lib/src/pvm/linux/: error.rs  fds.rs  fs.rs  memory.rs  parameters.rs  rng.rs  signals.rs
src/riscv/lib/src/state_backend/: clone_layout.rs  commitment_layout.rs  effects.rs  elems.rs  hash.rs  layout.rs  owned_backend.rs  proof_backend.rs  proof_layout.rs  region.rs  trans.rs  verify_backend.rs
src/riscv/lib/src/state_backend/proof_backend/: merkle.rs  proof.rs
src/riscv/lib/src/state_backend/proof_backend/proof/: deserialise_owned.rs  deserialise_stream.rs  deserialiser.rs
src/riscv/lib/src/state_context/: projection.rs
src/riscv/lib/src/stepper/: pvm.rs  test.rs
src/riscv/lib/src/stepper/test/: interpreter.rs  posix.rs
src/riscv/lib/tests/: test_determinism.rs  test_proofs.rs  test_regression.rs  test_suite_parser.rs
src/riscv/lib/tests/common/: mod.rs
src/riscv/lib/tests/expected/dummy/: state_hash_final  state_hash_initial
src/riscv/lib/tests/expected/jstz/: proof_initial  state_hash_final  state_hash_initial
src/riscv/sandbox/: Cargo.toml
src/riscv/sandbox/src/: cli.rs  main.rs
src/riscv/sandbox/src/commands/: gdb.rs  run.rs
src/riscv/sandbox/src/commands/bench/commands/: run.rs
src/riscv/scripts/: benchmark.sh  ci-bench.sh
src/riscv/tools/analyse-jit-functions/: Cargo.toml  README.md
src/riscv/tools/analyse-jit-functions/src/: disassembly.rs  main.rs  parser.rs
src/rust_deps/wasmer-3.3.0/lib/wasi-web/: package-lock.json
src/rustzcash_deps/: Cargo.toml
