[workspace]
resolver = "3"
members = ["lib", "sandbox", "tools/analyse-jit-functions"]
exclude = ["jstz", "dummy_kernel", "etherlink"]

[workspace.lints.clippy]
allow_attributes = "deny"
allow_attributes_without_reason = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "allow"

[workspace.dependencies]
anyhow = "1.0"
bincode = "1.3.3"
cfg-if = "1.0.1"
comfy-table = "7.1.4"
cranelift = "0.120.0"
cranelift-jit = "0.120.0"
cranelift-module = "0.120.0"
cranelift-native = "0.120.1"
derive_more = "0.99.20"
ed25519-dalek = "2.1.0"
elf = "0.7.4"
enum-tag = "0.3.0"
gdbstub = "0.7.6"
gdbstub_arch = "0.3.2"
ieee-apsqrt = "0.1.1"
itertools = "0.12.1"
lazy_static = "1.5.0"
libsecp256k1 = "0.7.2"
meansd = "2.1.0"
num_enum = "0.7.4"
numfmt = "1.1.1"
ocaml-build = "1.0.0"
paste = "1.0.14"
proptest = "1.7.0"
quanta = "0.12.5"
rand = "0.9.1"
rustc_apfloat = "0.2.0"
serde_json = "1.0.115"
sha2 = "0.10.9"
sha3 = "0.10.8"
tempfile = "3.20.0"
thiserror = "1.0.69"
try-blocks = "0.1.4"
tuples = "1.16.0"
vm-fdt = "0.3.0"
goldenfile = "1.8.0"
arbitrary-int = "1.3.0"
range-collections = "0.4.5"
capstone = "0.13"

[workspace.dependencies.tezos-smart-rollup-constants]
git = "https://gitlab.com/tezos/tezos.git"

[workspace.dependencies.tezos-smart-rollup-encoding]
git = "https://gitlab.com/tezos/tezos.git"

[workspace.dependencies.tezos-smart-rollup-utils]
git = "https://gitlab.com/tezos/tezos.git"

[workspace.dependencies.tezos-smart-rollup]
git = "https://gitlab.com/tezos/tezos.git"
features = ["utils"]

[workspace.dependencies.tezos_crypto_rs]
git = "https://gitlab.com/tezos/tezos.git"
default-features = false

[workspace.dependencies.strum]
version = "0.26.3"
features = ["derive"]

[workspace.dependencies.clap]
version = "4.4.6"
features = ["derive"]

[workspace.dependencies.serde]
version = "1.0.197"
features = ["derive"]

[workspace.dependencies.hex]
version = "0.4.3"
features = ["serde"]

[workspace.dependencies.ocaml]
version = "1.1.0"
default-features = false

# The dependency alias is used to make it obvious that it should not be used directly. Using it
# directly may have a surprising impact on performance when logging and tracing are disabled.
[workspace.dependencies.__tracing_do_not_use_directly]
package = "tracing"
version = "0.1.41"

[workspace.dependencies.tracing-subscriber]
version = "0.3.19"
features = ["json", "env-filter"] 
