[package]
name = "riscv-dummy"
version = "0.0.0"
edition = "2021"

[dependencies.tezos_crypto_rs]
version = "0.6.0"
git = "https://gitlab.com/tezos/tezos.git"
default-features = false

[dependencies.tezos-smart-rollup]
git = "https://gitlab.com/tezos/tezos.git"
version = "0.2.2"
default-features = false
features = [
  "debug_alloc",
  "proto-alpha",
  "panic-hook",
  "data-encoding",
  "alloc",
  "experimental-host-in-memory-store",
]

[dependencies.tezos-smart-rollup-constants]
git = "https://gitlab.com/tezos/tezos.git"

[dependencies]
hex = "0.4.3"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.169"
