[workspace]
members = ["bench", "kernel"]
resolver = "2"

[patch.crates-io]
tezos-smart-rollup = { git = "https://gitlab.com/tezos/tezos.git" }
tezos-smart-rollup-host = { git = "https://gitlab.com/tezos/tezos.git" }
tezos-smart-rollup-core = { git = "https://gitlab.com/tezos/tezos.git" }
tezos-smart-rollup-mock = { git = "https://gitlab.com/tezos/tezos.git" }
tezos-smart-rollup-encoding = { git = "https://gitlab.com/tezos/tezos.git" }
tezos-smart-rollup-entrypoint = { git = "https://gitlab.com/tezos/tezos.git" }
tezos-smart-rollup-debug = { git = "https://gitlab.com/tezos/tezos.git" }
tezos-smart-rollup-panic-hook = { git = "https://gitlab.com/tezos/tezos.git" }
tezos-smart-rollup-storage = { git = "https://gitlab.com/tezos/tezos.git" }
tezos_crypto_rs = { git = "https://gitlab.com/tezos/tezos.git" }
tezos_data_encoding = { git = "https://gitlab.com/tezos/tezos.git" }
# Patches from the jstz repo are dropped, copying them here
boa_ast = { git = "https://github.com/trilitech/boa.git", branch = "felix@enable-gc-reset" }
boa_engine = { git = "https://github.com/trilitech/boa.git", branch = "felix@enable-gc-reset" }
boa_gc = { git = "https://github.com/trilitech/boa.git", branch = "felix@enable-gc-reset" }
boa_interner = { git = "https://github.com/trilitech/boa.git", branch = "felix@enable-gc-reset" }
boa_macros = { git = "https://github.com/trilitech/boa.git", branch = "felix@enable-gc-reset" }
boa_parser = { git = "https://github.com/trilitech/boa.git", branch = "felix@enable-gc-reset" }
boa_profiler = { git = "https://github.com/trilitech/boa.git", branch = "felix@enable-gc-reset" }

[workspace.dependencies]
base64 = "0.22.0"
# The above boa patches apply only for dependencies of dependencies. 
# Patch needs to be here to take effect as a direct dependency as well.
boa_gc = { git = "https://github.com/trilitech/boa.git", branch = "felix@enable-gc-reset" }
http = "1.1.0"
bincode = "2.0.0-rc.3"
regex = "1.10.4"
serde_json = "1.0.115"

[workspace.dependencies.tezos-smart-rollup]
version = "0.2.2"
default-features = false
features = [
  "std",
  "crypto",
  "panic-hook",
  "data-encoding",
  "proto-alpha",
  "experimental-host-in-memory-store",
  "extra",
  "native-kernel",
]

[workspace.dependencies.jstz_kernel]
git = "https://github.com/jstz-dev/jstz.git"

[workspace.dependencies.jstz_crypto]
git = "https://github.com/jstz-dev/jstz.git"

[workspace.dependencies.jstz_proto]
git = "https://github.com/jstz-dev/jstz.git"

[workspace.dependencies.serde]
version = "1.0.197"
features = ["derive"]

[workspace.dependencies.hex]
version = "0.4.3"
features = ["serde"]

[workspace.dependencies.clap]
version = "4.4.6"
features = ["derive"]

[workspace.dependencies.tezos_crypto_rs]
version = "0.6.0"
git = "https://gitlab.com/tezos/tezos.git"
default-features = false

[workspace.dependencies.tezos_data_encoding]
version = "0.6.0"
git = "https://gitlab.com/tezos/tezos.git"
default-features = false
