[package]
name = "etherlink"
version = "0.0.0"
edition = "2021"

[dependencies]
hex.workspace = true
tezos-smart-rollup.workspace = true

[dependencies.evm_kernel]
workspace = true
features = ["debug"]

[target.'cfg(not(target_arch = "riscv64"))'.dependencies.evm_kernel]
workspace = true
features = ["debug", "dummy-store-get-hash"]

[features]
default = []
static-inbox = []
